--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_swiper_view: ^1.1.8
+  get_it: ^7.7.0
   provider: ^6.1.2
 
 dev_dependencies:
@@ -24,5 +25,4 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-  - assets/images/image_error.png
-  - assets/images/image_placeholder.png
+  - assets/images/image_placeholder.jpg
