--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   flutter_swiper_view: ^1.1.8
   get_it: ^7.7.0
+  mocktail: ^1.0.3
   provider: ^6.1.2
 
 dev_dependencies:
